--- a/Analytical/Analytick.csproj
+++ b/Analytical/Analytick.csproj
@@ -61,9 +61,10 @@
     <Content Include="analytical\func\flex.html" />
     <Content Include="analytical\func\permutation.html" />
     <Content Include="analytical\func\t-span.html" />
-    <Content Include="gist\fundametal.js" />
-    <Content Include="gist\style.css" />
-    <Content Include="gist\textarea.js" />
+    <Content Include="analytical\Leonic\fond-measure.html" />
+    <Content Include="celly-gist\fundametal.js" />
+    <Content Include="celly-gist\style.css" />
+    <Content Include="celly-gist\textarea.js" />
     <Content Include="analytical\language\kraft\kraft1.jpg" />
     <Content Include="analytical\language\kraft\kraft2.jpg" />
     <Content Include="analytical\language\kraft\kraft3.jpg" />
@@ -75,15 +76,15 @@
     <Content Include="analytical\language\turk.html" />
     <Content Include="analytical\language\adverse.html" />
     <Content Include="analytical\language\formsize.html" />
-    <Content Include="analytical\Leonic\c.html" />
-    <Content Include="analytical\Leonic\ctr.html" />
+    <Content Include="analytical\Leonic\cirlce.html" />
+    <Content Include="analytical\Leonic\kater.html" />
     <Content Include="analytical\Leonic\leon.html" />
-    <Content Include="analytical\Leonic\frant.html" />
-    <Content Include="analytical\Leonic\rt.html" />
-    <Content Include="analytical\Leonic\t.html" />
+    <Content Include="analytical\Leonic\fond.html" />
+    <Content Include="analytical\Leonic\fond-tryic.html" />
+    <Content Include="analytical\Leonic\tryic.html" />
     <Content Include="analytical\Leonic\trikon.html" />
     <Content Include="analytical\language\ipad.html" />
-    <Content Include="gist\hypertext.html" />
+    <Content Include="celly-gist\hypertext.html" />
     <Content Include="analytical\priority.html" />
     <Content Include="content\dist\css\bootstrap-theme.css" />
     <Content Include="content\dist\css\bootstrap-theme.min.css" />
