karact pus ksf andyuser

--- a/Analytical/Analytick.csproj
+++ b/Analytical/Analytick.csproj
@@ -50,42 +50,42 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="analytical\absock.html" />
-    <Content Include="analytical\advent.html" />
-    <Content Include="analytical\cybert.html" />
-    <Content Include="analytical\asnic\basic.html" />
-    <Content Include="analytical\asnic\celly.html" />
-    <Content Include="analytical\asnic\ketstring.html" />
-    <Content Include="analytical\asnic\ketstruct.html" />
-    <Content Include="analytical\asnic\leonic.html" />
-    <Content Include="analytical\func\flex.html" />
-    <Content Include="analytical\func\permutation.html" />
-    <Content Include="analytical\func\t-span.html" />
-    <Content Include="analytical\Leonic\fond-measure.html" />
+    <Content Include="absock\absock.html" />
+    <Content Include="asnic\advent.html" />
+    <Content Include="absock\cybert.html" />
+    <Content Include="asnic\basic.html" />
+    <Content Include="asnic\celly.html" />
+    <Content Include="asnic\ketstring.html" />
+    <Content Include="asnic\ketstruct.html" />
+    <Content Include="asnic\leonic.html" />
+    <Content Include="func\flex.html" />
+    <Content Include="func\permutation.html" />
+    <Content Include="func\t-span.html" />
+    <Content Include="maticals\fond-measure.html" />
     <Content Include="celly-gist\fundametal.js" />
     <Content Include="celly-gist\style.css" />
     <Content Include="celly-gist\textarea.js" />
-    <Content Include="analytical\language\kraft\kraft1.jpg" />
-    <Content Include="analytical\language\kraft\kraft2.jpg" />
-    <Content Include="analytical\language\kraft\kraft3.jpg" />
-    <Content Include="analytical\language\kraft\kraft4.jpg" />
-    <Content Include="analytical\language\kraft\kraft5.jpg" />
-    <Content Include="analytical\language\kraft\kraft6.jpg" />
-    <Content Include="analytical\language\kraft\kraft7.jpg" />
-    <Content Include="analytical\language\russia.html" />
-    <Content Include="analytical\language\turk.html" />
-    <Content Include="analytical\language\adverse.html" />
-    <Content Include="analytical\language\formsize.html" />
-    <Content Include="analytical\Leonic\cirlce.html" />
-    <Content Include="analytical\Leonic\kater.html" />
-    <Content Include="analytical\Leonic\leon.html" />
-    <Content Include="analytical\Leonic\fond.html" />
-    <Content Include="analytical\Leonic\fond-tryic.html" />
-    <Content Include="analytical\Leonic\tryic.html" />
-    <Content Include="analytical\Leonic\trikon.html" />
+    <Content Include="language\kraft\kraft1.jpg" />
+    <Content Include="language\kraft\kraft2.jpg" />
+    <Content Include="language\kraft\kraft3.jpg" />
+    <Content Include="language\kraft\kraft4.jpg" />
+    <Content Include="language\kraft\kraft5.jpg" />
+    <Content Include="language\kraft\kraft6.jpg" />
+    <Content Include="language\kraft\kraft7.jpg" />
+    <Content Include="language\russia.html" />
+    <Content Include="language\turk.html" />
+    <Content Include="language\adverse.html" />
+    <Content Include="language\formsize.html" />
+    <Content Include="maticals\cirlce.html" />
+    <Content Include="maticals\kater.html" />
+    <Content Include="maticals\leon.html" />
+    <Content Include="maticals\fond.html" />
+    <Content Include="maticals\fond-tryic.html" />
+    <Content Include="maticals\tryic.html" />
+    <Content Include="maticals\trikon.html" />
     <Content Include="celly-gist\ipad.html" />
     <Content Include="celly-gist\hypertext.html" />
-    <Content Include="analytical\priority.html" />
+    <Content Include="absock\priority.html" />
     <Content Include="content\dist\css\bootstrap-theme.css" />
     <Content Include="content\dist\css\bootstrap-theme.min.css" />
     <Content Include="content\dist\css\bootstrap.css" />
@@ -108,7 +108,7 @@
     <Content Include="controllers\object-extend.js" />
     <Content Include="controllers\string-extend.js" />
     <Content Include="dynamics\apisoda.js" />
-    <Content Include="index.html" />
+    <Content Include="asnic\fonkarea.html" />
     <Content Include="intellisense\erick.htm" />
     <Content Include="intellisense\intelly.htm" />
     <Content Include="models\constant.js" />
